@@ -9,7 +9,6 @@ define( [
             'dojo/_base/event',
             'dojo/mouse',
             'dojo/dom-construct',
-            'dojo/dom-geometry',
             'dojo/Deferred',
             'dojo/on',
             'JBrowse/has',
@@ -28,7 +27,6 @@ define( [
             domEvent,
             mouse,
             domConstruct,
-            domGeom,
             Deferred,
             on,
             has,
@@ -359,7 +357,8 @@ return declare( [BlockBasedTrack,FeatureDetailMixin,ExportMixin,FeatureContextMe
                                                   width:  block.domNode.offsetWidth+1,
                                                   style: {
                                                       cursor: 'default',
-                                                      height: totalHeight+'px'
+                                                      height: totalHeight+'px',
+                                                      position: 'relative'
                                                   },
                                                   innerHTML: 'Your web browser cannot display this type of track.',
                                                   className: 'canvas-track'
@@ -424,9 +423,9 @@ return declare( [BlockBasedTrack,FeatureDetailMixin,ExportMixin,FeatureContextMe
         if( this.displayMode != 'collapsed' ) {
             // make features get highlighted on mouse move
             block.own( on( block.featureCanvas, 'mousemove', function( evt ) {
-                               domGeom.normalizeEvent( evt );
-                               var bpX = evt.offsetX / block.scale + block.startBase;
-                               var feature = thisB.layout.getByCoord( bpX, evt.offsetY );
+                               evt = domEvent.fix( evt );
+                               var bpX = evt.layerX / block.scale + block.startBase;
+                               var feature = thisB.layout.getByCoord( bpX, evt.layerY );
                                thisB.mouseoverFeature( feature );
                            }));
             block.own( on( block.featureCanvas, 'mouseout', function( evt ) {
@@ -445,9 +444,9 @@ return declare( [BlockBasedTrack,FeatureDetailMixin,ExportMixin,FeatureContextMe
                  var thisB = this;
                  block.own(
                      on( block.featureCanvas, event, function( evt ) {
-                             domGeom.normalizeEvent( evt );
-                             var bpX = evt.offsetX / block.scale + block.startBase;
-                             var feature = thisB.layout.getByCoord( bpX, evt.offsetY );
+                             evt = domEvent.fix( evt );
+                             var bpX = evt.layerX / block.scale + block.startBase;
+                             var feature = thisB.layout.getByCoord( bpX, evt.layerY );
                              if( feature ) {
                                  var fRect = block.fRectIndex.getByID( feature.id() );
                                  handler.call({
