@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+ * Fixed a bug in which features in canvas-based feature tracks could
+   not be clicked in Firefox.  Thanks to GitHub user mke21 for
+   pointing this out.
+
  * Added support in `maker2jbrowse` for user-defined source tags in
    GFF3 output from MAKER.  Thanks to Carson Holt for contributing
    this fix.
